Fix z-index

--- a/index.css
+++ b/index.css
@@ -21,6 +21,7 @@ body {
 }
 
 .main-container__background {
+  z-index: 0;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -28,14 +29,17 @@ body {
 }
 
 .main-container__header {
+  z-index: 100;
 }
 
 .main-container__body {
+  z-index: 100;
   flex-grow: 1;
   position: relative;
 }
 
 .main-container__footer {
+  z-index: 100;
 }
 
 .layer {
@@ -44,7 +48,7 @@ body {
 }
 
 .layer-1 {
-  z-index: 100;
+  z-index: 200;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
